--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:landing": "PORT=3900 next dev --turbopack",
-    "build:landing": "next build",
-    "start:landing": "next start",
-    "lint:landing": "next lint"
+    "dev": "PORT=3900 next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
